--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,7 +22,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.games647.lambdaattack.LambdaAttack</mainClass>
+                            <mainClass>com.github.games647.lambdaattack.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -119,6 +119,12 @@
             <groupId>com.github.Steveice10</groupId>
             <artifactId>mcauthlib</artifactId>
             <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
         </dependency>
     </dependencies>
 </project>
